# labels_creator

./: .gitignore  CACHE_CLEAR_INSTRUCTIONS.md  INSTALL_DEPENDENCIES.md  MANIFEST.in  MIGRATION_GUIDE.md  README.md  application.py  clear_cache.sh  fix_module_cache.py  hooks.py  pyproject.toml  requirements.txt  setup.py  verify_installation.py
label_creator/: __init__.py  hooks.py  modules.txt  patches.txt
label_creator/api/: labels.py
label_creator/consignor/doctype/label_type/: label_type.js  label_type.json
label_creator/consignor/page/label_creator/: label_creator.json
label_creator/data/: labels_types.json
label_creator/fixtures/: label_type.json  web_page.json  workspace.json
label_creator/install/: install.py
label_creator/label_creator/doctype/label_type/: label_type.js  label_type.json  label_type.py
label_creator/label_creator/page/label_creator/: __init__.py  label_creator.js  label_creator.json  label_creator.py
label_creator/label_designer/doctype/label_type/: label_type.js  label_type.json
label_creator/label_designer/page/label_creator/: label_creator.js  label_creator.json
label_creator/patches/: add_barcode_type_to_label_types.py  create_default_label_types.py  update_label_types_with_sample_fields.py  update_qr_code_size_fields.py
label_creator/public/css/: style.css
label_creator/utils/: label_generator.py
label_creator/www/: __init__.py  label-creator.html  label-creator.py
templates/: index.html  labels_types.json  preview.html
